--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   background: radial-gradient(at top, var(--bg-grad-1), var(--bg-grad-2));
   min-height: 100vh;
   text-transform: uppercase;
+  color: var(--light-text);
 }
 
 /* Main content */
@@ -221,13 +222,15 @@ body {
   min-height: 10rem;
   background: #16213d;
   border-radius: 50%;
+  transform: scale(1.4);
+  z-index: -1;
 }
 
 .results_heading:first-of-type {
   grid-area: you-title;
 }
 
-.results_heading:first-of-type {
+.results_heading:last-of-type {
   grid-area: ai-title;
 }
 
@@ -235,8 +238,48 @@ body {
   grid-area: you-picked;
 }
 
-.results_result:first-of-type {
+.results_result:last-of-type {
   grid-area: ai-picked;
+}
+
+.results.show-winner {
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas:
+    "you-title . ai-title"
+    "you-picked result-winner ai-picked";
+}
+
+.winner .choice::after {
+  box-shadow: 0 0 0 40px #293251, 0 0 0 80px #232c4b, 0 0 0 130px;
+}
+
+.result_winner {
+  grid-area: result-winner;
+  display: grid;
+  place-items: center;
+}
+
+.results_text {
+  font-size: 3.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.play-again {
+  background: #fff;
+  outline: none;
+  border: 2px solid transparent;
+  border-radius: 0.6rem;
+  color: var(--dark-text);
+  padding: 0.6rem 3.5rem;
+  font-family: inherit;
+  text-transform: inherit;
+  font-size: 1.3rem;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+}
+
+.play-again:focus {
+  border: 2px solid var(--outline);
 }
 
 /* rules button */
@@ -336,4 +379,16 @@ body {
 /* Utilities */
 .preload * {
   transition: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.results {
+  margin-top: 5rem;
+}
+
+.results-heading {
+  margin-bottom: 5rem;
 }
